@@ -1,6 +1,6 @@
 ;;; Foreign function interface for CLISP
 ;;; Bruno Haible 19.2.1995
-;;; Sam Steingold 1998-2010, 2017
+;;; Sam Steingold 1998-2010, 2017-2018
 
 #+UNICODE
 (progn
@@ -778,7 +778,11 @@
                           *coutput-stream*)))
         (format *coutput-stream* ");~%")))
     (format *coutput-stream*
-            "~2%void module__~A__init_function_1 (module_t* module)~%~
+            ;; avoid -Wmissing-declarations
+            "~%void module__~A__init_function_1 (module_t* module);~%~
+            ~%void module__~A__init_function_2 (module_t* module);~%~
+            ~%void module__~A__fini_function (module_t* module);~%~
+            ~2%void module__~A__init_function_1 (module_t* module)~%~
             {~%  (void)module; /* avoid -Wunused-parameter */~%~{~%  ~A~}~%"
             *c-name* *init-once*)
     (let ((done (make-hash-table :test 'equal)))
