@@ -1,3 +1,9 @@
+2018-01-06  Sam Steingold  <sds@gnu.org>
+
+	Restore the code to avoid -Wmissing-declarations.
+	* utils/modprep.lisp (print-tables-2): Revert part of 2017-12-05.
+	* foreign1.lisp (finalize-coutput-file): Revert part of 2017-11-29.
+
 2018-01-04  Sam Steingold  <sds@gnu.org>
 
 	* modules/gdbm/gdbm.c (gdbm_open_flags): DEFFLAGSET, not DEFCHECKER.
